--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/404.html",
-        "status": 404
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/404.html",
+      "status": 404
+    }
+  ]
+}
