--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
-    { "source": "/(.*)", "destination": "/404.html", "status": 404 }
+    { "source": "/(.*)", "destination": "/404.html" }
   ]
 }
