--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
     { "source": "/(.*)", "destination": "/components/404.html" }
