--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "login-ui",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "lint": "npm run lint:html && npm run lint:css",
     "lint:html": "html-validate \"*.html\" \"components/**/*.html\"",
